--- a/Basic JavaScript Projects/Project1_expressions_alert/Index.html
+++ b/Basic JavaScript Projects/Project1_expressions_alert/Index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
 </head>
 <script src="JS/main.js"></script>
+
+<button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
+
+<p id="demo"></p>
+
 <body>
 </body>
 </html>
