--- a/JavaScript_Project/TickTacToe/TicTacToe.html
+++ b/JavaScript_Project/TickTacToe/TicTacToe.html
@@ -5,6 +5,9 @@
         <h1>THE TIC TAC TOE GAME</h1>
         <link rel="stylesheet" href="./css/game.css">
         <script src="./js/tictactoe.js"></script>
+        <audio src="./media/place.mp3"></audio>
+        <audio src="./media/tie.mp3"></audio>
+        <audio src="./media/winGame.mp3"></audio>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
