updated TTT assignment

--- a/JavaScript_Project/TickTacToe/TicTacToe.html
+++ b/JavaScript_Project/TickTacToe/TicTacToe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
     <head>
         <title>Play Tic Tac Toe Online!</title>
         <h1>THE TIC TAC TOE GAME</h1>
@@ -7,8 +7,8 @@
         <script src="./js/tictactoe.js"></script>
  
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial scale=1.0'>
     </head>
 
     <body id="body">
@@ -34,5 +34,5 @@
                     </tr>
                 </table>
             </div>
-
+    </body>
 </html>
