TTT Updated code
fully functioning Tick Tac Toe code

--- a/JavaScript_Project/TickTacToe/TicTacToe.html
+++ b/JavaScript_Project/TickTacToe/TicTacToe.html
@@ -14,7 +14,7 @@
     <body id="body">
         <!--This container is needed to overlay our canvas over our table.-->
             <div class="center-container">
-                <canvas id='win-lines' width='608'></canvas>
+                <canvas id='win-lines' width='608' height="608"></canvas>
                 <!--Note: Canavas width and height must be set within the element.-->
                 <table>
                     <tr>
