--- a/JavaScript_Project/calculator.html
+++ b/JavaScript_Project/calculator.html
@@ -43,7 +43,7 @@
 <button type="button" value="0">0</button>
 
 <button type="button" class= "decimal function" value=".">.</button>
-<button type="button" class="all-clear function" value= "AC"></button>
+<button type="button" class="all-clear function" value= "AC">AC</button>
 <button type="button" class="equal-sign operator" value="=">=</button>
 
 </div>
