--- a/ajax_basic.html
+++ b/ajax_basic.html
@@ -11,7 +11,7 @@
 			<div class='content' id="content">
 				<input type="button" class="button" value="Get Content" id="btn_content" onclick="getContent();"/>
 			</div>
-		<script type="text/javascript">
+		<script type="text/javascript">  // change url to http://127.0.0.1:8080/ajax_basic.html
 			
 			// Step 1: setip the xml http request
 			
