--- a/JavaScript_Project/HTML_1.html
+++ b/JavaScript_Project/HTML_1.html
@@ -5,7 +5,7 @@
         <script src="JavaScript_1.js" ></script>
         </head>
         <body>
-        <h1>What is your favorite flavour Protein shake?</h1>
+        <h1 style="font-size:10vw;">What is your favorite flavour Protein shake?</h1>
         <h3>Pick one from this list:</h3>
         <ul> <!--List if flavours-->
             <li>Chocolate</li>
