--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -52,7 +52,7 @@
         </video>
         
             <div>
-                <p>Buy Your Ropes Today!<p>
+                <p><a href="https://www.youtube.com/channel/UCg3QSOCyaPVSNUqr_OrCsJw"> Buy Your Ropes Today!</a><p>
             </div>
         </div>
     </div>
